tests/expectations/compiler/records/same_name_diff_type_fail.out
Error [ETYC0372119]: Received different types `parent.aleo::R` and `child.aleo::R` for the operation `==`.
    --> compiler-test:12:16
     |
  12 |         return r1 == child.aleo::create();
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Make both operands the same type.
